--- a/assets/panel.html
+++ b/assets/panel.html
@@ -84,20 +84,28 @@
         font-weight: 700;
         color: var(--muted);
       }
-      #tooltip {
-        position: fixed;
-        z-index: 9999;
-        pointer-events: none;
-        background: #fffdf8;
+      #ruleInfo .rule-name {
+        font-weight: 700;
+        font-size: 14px;
+        margin-bottom: 6px;
+      }
+      #ruleInfo .rule-line {
+        font-size: 12px;
+        color: var(--muted);
+        margin-bottom: 6px;
+      }
+      #ruleInfo .rule-tags {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 6px;
+      }
+      #ruleInfo .rule-tag {
         border: 1px solid var(--border);
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
-        border-radius: 10px;
-        padding: 8px 10px;
+        border-radius: 999px;
+        padding: 4px 10px;
         font-size: 11px;
-        color: var(--ink);
-        white-space: pre-wrap;
-        max-width: 320px;
-        display: none;
+        color: var(--muted);
+        background: #fffaf0;
       }
       #configToggle {
         border: 1px solid var(--border);
@@ -137,7 +145,7 @@
       main {
         padding: 16px 20px;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 280px;
         gap: 16px;
       }
       .pane {
@@ -261,6 +269,13 @@
         <h3>After</h3>
         <pre id="after"></pre>
       </section>
+      <section class="pane" id="ruleInfo">
+        <h3>Rule Info</h3>
+        <div class="rule-name" id="ruleInfoName">-</div>
+        <div class="rule-line" id="ruleInfoDetail"></div>
+        <div class="rule-line" id="ruleInfoMatch"></div>
+        <div class="rule-tags" id="ruleInfoTags"></div>
+      </section>
       <section class="pane" id="diff">
         <h3>Diff</h3>
         <pre id="diffText"></pre>
@@ -281,7 +296,6 @@
       <button class="action primary" id="paste">Paste</button>
       <button class="action" id="cancel">Cancel</button>
     </div>
-    <div id="tooltip"></div>
     <script>
       const state = {
         suggestions: [],
@@ -303,7 +317,6 @@
       const searchInput = document.getElementById("ruleSearch");
       const configPanel = document.getElementById("configPanel");
       const configText = document.getElementById("configText");
-      const tooltip = document.getElementById("tooltip");
 
       function visibleRules() {
         const list = searchQuery.trim()
@@ -332,6 +345,13 @@
 
           const badges = document.createElement("span");
           badges.className = "rule-badges";
+          if (rule.pinned) {
+            const badge = document.createElement("span");
+            badge.className = "rule-badge";
+            badge.textContent = "P";
+            badge.title = "Pinned";
+            badges.appendChild(badge);
+          }
           if (rule.auto_accept) {
             const badge = document.createElement("span");
             badge.className = "rule-badge";
@@ -351,11 +371,36 @@
           }
 
           btn.onclick = () => selectRule(rule.id);
-          btn.onmouseenter = (event) => showTooltip(event, rule);
-          btn.onmousemove = (event) => positionTooltip(event);
-          btn.onmouseleave = () => hideTooltip();
           suggestions.appendChild(btn);
         });
+      }
+
+      function renderRuleInfo() {
+        const selected = state.allRules.find((rule) => rule.id === state.selectedRuleId);
+        document.getElementById("ruleInfoName").textContent = selected ? selected.name : "-";
+        document.getElementById("ruleInfoDetail").textContent = selected ? selected.detail : "";
+        document.getElementById("ruleInfoMatch").textContent = selected ? selected.match_hint : "";
+        const tags = document.getElementById("ruleInfoTags");
+        tags.innerHTML = "";
+        if (!selected) return;
+        if (selected.pinned) {
+          const tag = document.createElement("span");
+          tag.className = "rule-tag";
+          tag.textContent = "Pinned";
+          tags.appendChild(tag);
+        }
+        if (selected.auto_accept) {
+          const tag = document.createElement("span");
+          tag.className = "rule-tag";
+          tag.textContent = "Auto-accept";
+          tags.appendChild(tag);
+        }
+        if (selected.uses_remote) {
+          const tag = document.createElement("span");
+          tag.className = "rule-tag";
+          tag.textContent = "Remote model";
+          tags.appendChild(tag);
+        }
       }
 
       function renderMeta() {
@@ -388,6 +433,7 @@
       function render() {
         renderRules();
         renderMeta();
+        renderRuleInfo();
         document.getElementById("before").textContent = state.before || "";
         document.getElementById("after").textContent = state.after || "";
         document.getElementById("diffText").textContent = state.diff || "";
@@ -507,29 +553,6 @@
         }
       });
 
-      function showTooltip(event, rule) {
-        if (!rule) return;
-        const detail = rule.detail || "";
-        const match = rule.match_hint || "";
-        const text = [detail, match].filter(Boolean).join("\\n");
-        if (!text) return;
-        tooltip.textContent = text;
-        tooltip.style.display = "block";
-        positionTooltip(event);
-      }
-
-      function positionTooltip(event) {
-        if (tooltip.style.display !== "block") return;
-        const offset = 12;
-        const x = Math.min(window.innerWidth - 340, event.clientX + offset);
-        const y = Math.min(window.innerHeight - 120, event.clientY + offset);
-        tooltip.style.left = `${Math.max(12, x)}px`;
-        tooltip.style.top = `${Math.max(12, y)}px`;
-      }
-
-      function hideTooltip() {
-        tooltip.style.display = "none";
-      }
     </script>
   </body>
 </html>
